# Lovv-agent

./: .gitignore  LANGGRAPH_SPEC_AUTHORING_INSTRUCTIONS.md  README.md  V2_MODIFICATION_CLARIFICATION_BRIEF.md  pyproject.toml
app/LovvAgentV1/: main.py  pyproject.toml
app/LovvAgentV1/lovv_agent/: config.py  harness.py
app/LovvAgentV1/lovv_agent/adapters/: __init__.py  aws_runtime.py  bedrock_converse.py
app/LovvAgentV1/lovv_agent/agents/: __init__.py  candidate_evidence.py  festival_verifier.py  intent.py  planner.py  supervisor.py
app/LovvAgentV1/lovv_agent/models/: __init__.py
app/LovvAgentV1/lovv_agent/prompts/: candidate_reason_claim.v1.md  intent_normalization.v1.md  planner_copy_explanation.v1.md  registry.py
app/LovvAgentV1/lovv_agent/repositories/: dynamodb.py  s3_vectors.py
app/LovvAgentV1/lovv_agent/tools/: destination_search.py  dynamo_lookup.py  response_packager.py
app/LovvAgentV2/: main.py  pyproject.toml
app/LovvAgentV2/lovv_agent_v2/: agentcore_entrypoint.py  agentcore_io.py  harness.py  harness_runtime.py
app/LovvAgentV2/lovv_agent_v2/agents/city_select/: nodes.py  retrieval_node.py  selection.py  subgraph.py  tools.py
app/LovvAgentV2/lovv_agent_v2/agents/city_select/retrieval/: agent.py  flow.py  policy.py
app/LovvAgentV2/lovv_agent_v2/agents/city_select/scoring/: agent.py  failures.py  payloads.py  service.py  service_geo.py  service_types.py
app/LovvAgentV2/lovv_agent_v2/agents/festival_verifier/: README.md  agent.py  audit.py  contracts.py  date_policy.py  node.py  theme_policy.py  verifier.py
app/LovvAgentV2/lovv_agent_v2/agents/intent/: modify_city_change.py  modify_current_order.py  modify_dispatch.py  modify_parser.py  modify_prompt.py  modify_prompt_normalizer.py  modify_reanchor.py  modify_replacement_query.py  modify_slots.py  node.py  prompt.py  prompt_regions.py  prompt_schema.py  request_shape.py  tools.py  validator.py
app/LovvAgentV2/lovv_agent_v2/agents/mock_contract/: __init__.py
app/LovvAgentV2/lovv_agent_v2/agents/planner/: agent.py  assemble.py  context.py  ors_provider.py  place_selection.py  routing.py  state_adapter.py  travel_time.py
app/LovvAgentV2/lovv_agent_v2/agents/profile/: supplement.py
app/LovvAgentV2/lovv_agent_v2/agents/response_packager/: README.md  agent.py  clarification_resume.py  explain_itinerary.py  itinerary_explanation_mapping.py  itinerary_item_payload.py  node.py  packager.py  weather_alternative_resume.py  weather_explanation.py  weather_primary_resume.py  weather_replacement_selection.py  weather_response_context.py  weather_route_feasibility.py
app/LovvAgentV2/lovv_agent_v2/agents/supervisor/: README.md  confirmation_routing.py  dispatcher.py  explanation_routing.py  router.py
app/LovvAgentV2/lovv_agent_v2/analysis/: soft_channel.py
app/LovvAgentV2/lovv_agent_v2/common/: telemetry.py  telemetry_callback_compat.py  telemetry_invocation.py  telemetry_lifecycle.py  telemetry_memory.py  telemetry_metrics.py  telemetry_node_metrics.py  telemetry_route_guard.py  telemetry_safety.py  telemetry_threading.py
app/LovvAgentV2/lovv_agent_v2/core/: __init__.py  graph.py  runtime_state.py
app/LovvAgentV2/lovv_agent_v2/infra/: config.py  dynamo_lookup.py
app/LovvAgentV2/lovv_agent_v2/infra/adapters/: embeddings.py
app/LovvAgentV2/lovv_agent_v2/infra/memory/: checkpointer.py
app/LovvAgentV2/lovv_agent_v2/infra/repositories/: dynamodb.py  profile_dynamodb.py
app/LovvAgentV2/lovv_agent_v2/models/: __init__.py  clarification.py  clarification_apply.py  clarification_texts.py  schemas.py
app/LovvAgentV2/lovv_agent_v2/resources/: attraction_subtypes.json  city_identity_map.json  city_monthly_weather_risks.json  city_monthly_weather_thresholds.json
app/LovvAgentV2/lovv_agent_v2/tools/: __init__.py  agentcore_credentials.py  destination_search.py  ors_provider.py  saved_itinerary_signals.py  travel_time.py
app/LovvAgentV2/lovv_agent_v2/tools/ors_helper/: ors_matrix.py
(+1114 files in other folders)
