[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lovv-agent"
version = "0.1.0"
description = "Lovv LangGraph agent implementation before AgentCore Runtime migration."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lovv_agent"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
