[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lovv-agent"
version = "0.1.0"
description = "Lovv LangGraph agent implementation before AgentCore Runtime migration."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "boto3>=1.34,<2",
    "langgraph>=0.6,<2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lovv_agent"]

[tool.hatch.build.targets.wheel.force-include]
"src/lovv_agent/prompts/candidate_reason_claim.v1.md" = "lovv_agent/prompts/candidate_reason_claim.v1.md"
"src/lovv_agent/prompts/intent_normalization.v1.md" = "lovv_agent/prompts/intent_normalization.v1.md"
"src/lovv_agent/prompts/planner_copy_explanation.v1.md" = "lovv_agent/prompts/planner_copy_explanation.v1.md"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
