[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lovv-agent-runtime"
version = "0.1.0"
description = "AgentCore Runtime wrapper for the Lovv LangGraph recommendation agent."
requires-python = "==3.12.*"
dependencies = [
    "aws-opentelemetry-distro",
    "bedrock-agentcore>=1.8,<2",
    "boto3>=1.34,<2",
    "langgraph>=0.6,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["lovv_agent"]
