[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lovv-agent-v2-runtime"
version = "2.0.0"
description = "AgentCore Runtime wrapper for the Lovv V2 LangGraph recommendation agent."
requires-python = "==3.12.*"
dependencies = [
    "aws-opentelemetry-distro",
    "bedrock-agentcore>=1.15,<2",
    "boto3>=1.34,<2",
    "langgraph>=0.6,<2",
    "python-dotenv>=1.0,<2",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-exporter-otlp>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "langgraph-checkpoint-aws>=1.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["lovv_agent_v2"]
